--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,195 +1,125 @@
 <!DOCTYPE html>
-<html lang="en"
-	  xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>E-commerce Application</title>
 
-	<title>E-commerce application</title>
-	<base href="/">
-	<!-- Bootstrap CSS  & Font Awesome-->
-	<link href="css/bootstrap.css" rel="stylesheet">
-<link href="font-awesome/css1/all.css" rel="stylesheet">
-<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-<link rel="icon" href="images/icon.png" />
-<!-- Our Custom CSS -->
-<link rel="stylesheet" href="style4.css">
-<link rel="stylesheet" href="card.css">
-<script type="text/javascript" src="font-awesome/js1/fontawesome.js"></script>
-<script type="text/javascript" src=""></script>
-
+    <!-- Bootstrap CSS & Font Awesome -->
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/font-awesome/css/all.css" rel="stylesheet">
+    <link rel="icon" href="/images/icon.png" />
+    <link rel="stylesheet" href="/css/style4.css">
+    <link rel="stylesheet" href="/css/card.css">
 </head>
+
 <body>
-	<div class="wrapper">
-		<!-- Sidebar  -->
-		<nav th:fragment="sidebar" id="sidebar">
-			<div class="sidebar-header">
-				<h3>&nbsp;&nbsp;&nbsp;E-c App</h3>
-				<strong><i class="fa fa-shopping-cart" aria-hidden="true"></i></strong>
-			</div>
+<div class="wrapper">
+    <!-- Sidebar -->
+    <nav class="active" id="sidebar">
+        <div class="sidebar-header">
+            <h3>&nbsp;&nbsp;&nbsp;E-c App</h3>
+            <strong><i class="fa fa-shopping-cart" aria-hidden="true"></i></strong>
+        </div>
 
-			<ul class="list-unstyled components">
-				<li class="active"><a href="#homeSubmenu"
-					data-toggle="collapse" aria-expanded="false"
-					class="dropdown-toggle"> <i class="fas fa-home"></i> Home
-				</a>
-					<ul class="collapse list-unstyled" id="homeSubmenu">
-						<li><a href="#">My cart</a></li>
-						<li><a href="#">My wishlist</a></li>
-					</ul></li>
-				<li><a href="#"> <i class="fas fa-briefcase"></i> About
-				</a> <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
-					class="dropdown-toggle"> <i class="fas fa-copy"></i> pages
-				</a>
-					<ul class="collapse list-unstyled" id="pageSubmenu">
-						<li><a href="#">category</a></li>
-						<li><a href="#">products</a></li>
-						<li><a href="#">more</a></li>
-					</ul></li>
-				<li><a href="#"> <i class="fas fa-image"></i> Portfolio
-				</a></li>
-				<li><a href="#"> <i class="fas fa-question"></i> FAQ
-				</a></li>
-				<li><a href="#"> <i class="fas fa-paper-plane"></i> Contact
-				</a></li>
-			</ul>
-		</nav>
+        <ul class="list-unstyled components">
+            <li class="active">
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fas fa-home"></i> Home
+                </a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li><a href="#">My Cart</a></li>
+                    <li><a href="#">My Wishlist</a></li>
+                </ul>
+            </li>
+            <li><a href="#"><i class="fas fa-briefcase"></i> About</a></li>
+            <li>
+                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fas fa-copy"></i> Pages
+                </a>
+                <ul class="collapse list-unstyled" id="pageSubmenu">
+                    <li><a href="#">Category</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">More</a></li>
+                </ul>
+            </li>
+            <li><a href="#"><i class="fas fa-image"></i> Portfolio</a></li>
+            <li><a href="#"><i class="fas fa-question"></i> FAQ</a></li>
+            <li><a href="#"><i class="fas fa-paper-plane"></i> Contact</a></li>
+        </ul>
+    </nav>
 
-		<!-- Page Content  -->
-		<div id="content">
-			<nav th:replace="index :: topBar">
-				
-			</nav>
-			<div class="line"></div>
-			<div class="container" id="app">
+    <!-- Page Content -->
+    <div id="content">
+        <nav class="navbar navbar-expand-lg navbar-light" style="border-bottom: 4px solid #7386D5;">
+            <div class="container-fluid">
+                <button type="button" id="sidebarCollapse" class="btn btn-info mr-4">
+                    <i class="fas fa-align-left"></i>
+                </button>
+                <form class="form-inline frm">
+                    <input class="form-control mr-sm-2" type="search" id="search" placeholder="Search" aria-label="Search">
+                </form>
 
-				<div class="row g-2">
-					
-					<div class="col-md-3" th:replace="index :: generalSection">
-						
-					</div>
+                <!-- Navbar Icons: Cart and Profile -->
+                <div class="ml-auto d-flex align-items-center">
+                    <!-- Cart Icon -->
+                    <a href="/shoppingCart" class="btn btn-outline-secondary mr-3">
+                        <img src="/images/cart.png" alt="Cart Icon" style="width: 24px; height: 24px;">
+                        <span class="badge badge-light">0</span>
+                    </a>
 
-					<div class="col-md-9">
+                    <!-- Profile Dropdown -->
+                    <div class="dropdown">
+                        <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="profileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img src="/images/profile.jpg" alt="Profile Icon" style="width: 24px; height: 24px;">
+                            <span class="font-weight-bold ml-2" th:if="${session.username != null}" th:text="${session.username}">Username</span>
+                            <span th:if="${session.username == null}">Profile</span>
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="profileDropdown">
+                            <!-- Show login/register options if not logged in -->
+                            <div th:if="${session.username == null}">
+                                <a class="dropdown-item" href="/login">Login</a>
+                                <a class="dropdown-item" href="/register">Register</a>
+                            </div>
+                            <!-- Show user options if logged in -->
+                            <div th:if="${session.username != null}">
+                                <a class="dropdown-item" href="/profile">My Profile</a>
+                                <a class="dropdown-item" href="/logout">Logout</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
 
-						<div class="row g-2">
-						
-							<div class="col-md-6">
-								<div id="carouselExampleControls" class="carousel slide"
-									data-ride="carousel">
-									<div class="carousel-inner">
-										<div class="carousel-item active">
-											<img th:src="*{'data:image/jpeg;base64,'+{product.image}}"
-							                    alt=""
-												class="d-block w-100" >
-										</div>
-										<div class="carousel-item" th:each="carousel : ${product.carousel}">
-											<img th:src="*{'data:image/jpeg;base64,'+{carousel.image}}"
-												class="d-block w-100" alt="...">
-										</div>
-										
-									</div>
-									<a class="carousel-control-prev"
-										href="#carouselExampleControls" role="button"
-										data-slide="prev"> <span
-										class="carousel-control-prev-icon" aria-hidden="true"></span>
-										<span class="sr-only">Previous</span>
-									</a> <a class="carousel-control-next"
-										href="#carouselExampleControls" role="button"
-										data-slide="next"> <span
-										class="carousel-control-next-icon" aria-hidden="true"></span>
-										<span class="sr-only">Next</span>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-6">
+        <div class="container" id="app">
+            <div class="row">
+                <!-- Product Details Section -->
+                <div class="container mt-5">
+                    <div th:if="${product != null}">
+                        <h1 th:text="${product.name}">Product Name</h1>
+                        <img th:src="@{${product.image}}" alt="Product Image" class="img-fluid" style="max-width: 30%; height: auto;" />
+                        <p th:text="'$' + ${product.price}">Product Price</p>
+                        <p th:text="${product.description}">Product Description</p>
+                        <button class="btn btn-primary">Add to Cart</button>
+                    </div>
+                    <div th:if="${product == null}">
+                        <p>Product not found</p>
+                    </div>
+                </div>
 
-								<h4 class="font-bold m-b-xs">[[${product.name}]]</h4>
+            </div>
+        </div>
+    </div>
+</div>
 
-								<div class="m-t-md">
-									<h5 class="product-main-price">
-										$[[${product.price}]] <small class="text-muted"> -[[${product.discount.discount}]]%</small>
-									</h5>
-								</div>
-								<hr>
+<!-- Script Links -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-								<h5>Product description</h5>
-
-								<div class="small text-muted">
-									[[${product.description}]]
-								</div>
-								<hr>
-
-								<div>
-									<div class="cart-button">
-										<button class="btn btn-primary btn-sm  button" data-toggle="modal" th:attr="data-target='#exampleModalCenter'+*{product.id}">
-											<i class="fa fa-cart-plus"></i> Add to cart
-										</button>
-										
-										<!-- Modal -->
-										<div class="modal fade" th:id="*{'exampleModalCenter'+{product.id}}"
-											data-backdrop="static" data-keyboard="false" tabindex="-1"
-											aria-labelledby="staticBackdropLabel" aria-hidden="true">
-											<div class="modal-dialog modal-dialog-centered">
-												<div class="modal-content">
-													<div class="modal-header">
-														<h5 class="modal-title" id="staticBackdropLabel">add to cart</h5>
-														<button type="button" class="close" data-dismiss="modal"
-															aria-label="Close">
-															<span aria-hidden="true">&times;</span>
-														</button>
-													</div>
-													<div class="modal-body">
-													
-														<div class="card" >
-															<img th:src="*{'data:image/jpeg;base64,'+{product.image}}" height="250px" class="card-img-top" alt="...">
-															<div class="card-body">
-															 <form action="/addToCart" method="POSt">
-															 <input type="hidden" name="id" th:value="${product.id}"/>
-															  <input type="number" min="1" value="1" name="quantity" class="form-control" placeholder="quantity" />
-															  <button type="submit" class="btn btn-primary mt-2"> submit</button>
-															 </form>
-															</div>
-														</div>
-													</div>
-
-												</div>
-											</div>
-										</div>
-										
-										<button class="btn btn-primary btn-sm  button ml-2 mr-2">
-											<i class="fa fa-heart"></i> Add to wishlist
-										</button>
-									
-									</div>
-								</div>
-
-							</div>
-						</div>
-					</div>
-
-				</div>
-				<div class="line"></div>
-			</div>
-		</div>
-		<!-- Bootstrap JS & jQuery -->
-		<script src="js/jquery-3.1.1.min.js"></script>
-		<script src="js/bootstrap.js"></script>
-		<!-- Popper.JS -->
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
-			integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
-			crossorigin="anonymous"></script>
-		<script type="text/javascript" src="api/ajaxFetch.js"></script>
-
-		<script type="text/javascript">
-		$(document).ready(function() {
-			$('#sidebarCollapse').on('click', function() {
-				$('#sidebar').toggleClass('active');
-			});
-		});
-	</script>
-	<script type="text/javascript" src="api/ajaxFetch.js"></script>
 </body>
+
 </html>
