--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,6 +87,7 @@
 							<div th:if="${session.username != null}">
 								<a class="dropdown-item" href="/profile">My Profile</a>
 								<a class="dropdown-item" href="/logout">Logout</a>
+								<a class="dropdown-item" href="/admin/index">Admin Panel</a>
 							</div>
 						</div>
 					</div>
@@ -157,8 +158,11 @@
 								<div class="card-body" style="display: flex; flex-direction: column; justify-content: space-between;">
 									<h5 class="card-title" th:text="${product.name}"></h5>
 									<p class="card-text" th:text="'$' + ${product.price}"></p>
-									<a href="javascript:void(0);" class="btn btn-primary add-to-cart-btn"
-									   data-id="${product.id}" data-quantity="1">Add to Cart</a>
+									<form action="/addToCart" method="post" th:object="${product}">
+										<input type="hidden" name="id" th:value="${product.id}" />
+										<input type="hidden" name="quantity" value="1" />
+										<button type="submit" class="btn btn-primary">Add to Cart</button>
+									</form>
 								</div>
 							</div>
 						</div>
